# BizNES

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml
NES_Emulator/: CMakeLists.txt  NES_Emulator.cpp  NES_Emulator.h  mos6502.cpp  mos6502.h
assets/fonts/: TicketingReadMe.txt
src/: BizNesDisplay.cpp  BizNesDisplay.h  Bus.cpp  Bus.h  CMakeLists.txt  Cartridge.cpp  Cartridge.h  Mapper.cpp  Mapper.h  Mapper_000.cpp  Mapper_000.h  NES_Emulator.cpp  NES_Emulator.h  PPU.cpp  PPU.h  main.cpp  mos6502.cpp  mos6502.h  opcode.cpp  opcode.h  opcode_lookup.cpp
tests/: CMakeLists.txt  bus_tests.cpp  cpu_flag_tests.cpp  cpu_logic_tests.cpp  cpu_unit_tests.cpp  test.cpp  test_setup.cpp  test_setup.h
tools/: opcodes.csv
tools/opcode_lookup/: code_gen.py  opcode_template.jinja2
tools/opcode_verification/: opcode_timings.py  opcode_verification.py  output.csv
